# game_cabinet

./: LICENSE  amiberry_zip2lha.py  controller_config.txt  game_cabinet.service  game_cabinet.txt  srv.go
game_cabinet_service/: cpuload.py  game_time_monitor.py  gpio.py  gpio2.py  gpio2.py~  lcd_display.py  lcd_display.py~  piperead.py  test.py
game_cabinet_service_go/: .gitignore  build.sh  game_cabinet_service_go  test.go
game_joy_service/: .gitignore  build.sh  clean.sh  joyservice  opis.txt
game_joy_service/src/: .gitignore  CMakeLists.txt  a.out  a.out.orig  arcadejoy.cpp  arcadejoy.cpp.orig  colormod.h  config.txt  fifo.cpp  fifo.h  inputdevice.cpp  inputdevice.h  joyproxy.cpp  joyproxy.h  main.cpp  process.cpp  process.h  usergroups.cpp  usergroups.h
game_manager/: .gitignore  go.mod  go.sum  main.go  test.go
game_manager/asyncpiperdr/: asyncpiperdr.go
game_manager/cpuinfo/: cpuinfo.go
game_manager/cpuload/: cpuload.go
game_manager/cpustats/: cpuload.go
game_manager/gamelogger/: gamelogger.go
game_manager/gamestatsdb/: gamestatsdb.go
game_manager/retropie/: gametime.go
joystick_service/: a.out  joy.c  joy.txt
rom_tools/: .#cheat_enabler.txt  amiberry_fixlha.py  amiberry_zip2lha.py  amiga_scrape.py  bulk_rename.sh  cheat_enabler.txt  mame_remove_mature.py  mame_vert_config_gen.py  whdload_broken_detect.py
rom_tools/data/: amiga_lemon.json  amiga_retropie.json  comp_list.json  gamelist.xml
rom_tools/lha/: lha.tgz
runcommand_scripts/: desc.txt  install.sh  runcommand-onend.sh  runcommand-onstart.sh
(+3 files in other folders)
